rename ghcr image

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,32 +2,31 @@ name: Deploy Image to GHCR
 
 on:
   release:
-    types: [ published ]
+    types: [published]
   workflow_dispatch:
 
-
 jobs:
-  push-secure-secret-share-image:
+  push-whisper-image:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
-    - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v4
+      - name: "Checkout GitHub Action"
+        uses: actions/checkout@v5
 
-    - name: 'Login to GitHub Container Registry'
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
+      - name: "Login to GitHub Container Registry"
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
 
-    - name: Build and push with version tag
-      run: |
-        VERSION=${{ github.ref_name }}
+      - name: Build and push with version tag
+        run: |
+          VERSION=${{ github.ref_name }}
 
-        docker build . --tag ghcr.io/${{ github.repository_owner }}/secure_secret_share:${VERSION}
-        docker build . --tag ghcr.io/${{ github.repository_owner }}/secure_secret_share:latest
-        docker push ghcr.io/${{ github.repository_owner }}/secure_secret_share:${VERSION}
-        docker push ghcr.io/${{ github.repository_owner }}/secure_secret_share:latest
+          docker build . --tag ghcr.io/${{ github.repository_owner }}/whisper:${VERSION}
+          docker build . --tag ghcr.io/${{ github.repository_owner }}/whisper:latest
+          docker push ghcr.io/${{ github.repository_owner }}/whisper:${VERSION}
+          docker push ghcr.io/${{ github.repository_owner }}/whisper:latest
